--- a/package.json
+++ b/package.json
@@ -9,30 +9,32 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.10.0",
-    "@prisma/client": "^6.15.0",
+    "@auth/prisma-adapter": "^2.1.0",
+    "@eslint/js": "^9.4.0",
+    "@next/eslint-plugin-next": "^14.2.3",
+    "@prisma/client": "^5.15.0",
     "@types/bcryptjs": "^2.4.6",
-    "bcryptjs": "^3.0.2",
-    "next": "15.5.2",
+    "bcryptjs": "^2.4.3",
+    "eslint-plugin-react": "^7.34.2",
+    "next": "14.2.3",
     "next-auth": "5.0.0-beta.19",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "typescript-eslint": "^7.11.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20.19.13",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.2",
-    "prisma": "^6.15.0",
-    "tailwindcss": "^4",
+    "@types/node": "^20.14.2",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8.4.38",
+    "prisma": "^5.15.0",
+    "tailwindcss": "^3.4.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5.4.5"
   },
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node app/prisma/seed.ts"
   }
 }
-
