--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "@eslint/js": "^9.4.0",
     "@next/eslint-plugin-next": "^14.2.3",
     "@prisma/client": "^5.15.0",
+    "@tailwindcss/postcss": "^4.1.13",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
     "eslint-plugin-react": "^7.34.2",
+    "globals": "^15.4.0",
     "next": "14.2.3",
     "next-auth": "5.0.0-beta.19",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "typescript-eslint": "^7.11.0"
+    "typescript-eslint": "^7.13.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
@@ -35,6 +37,6 @@
     "typescript": "^5.4.5"
   },
   "prisma": {
-    "seed": "ts-node app/prisma/seed.ts"
+    "seed": "ts-node prisma/seed.ts"
   }
 }
