--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "eslint"
+  },
+  "engines": {
+    "node": "20.x"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.1.0",
     "@eslint/js": "^9.4.0",
     "@next/eslint-plugin-next": "^14.2.3",
     "@prisma/client": "^5.15.0",
-    "@tailwindcss/postcss": "^4.1.13",
+    "@tailwindcss/postcss": "^4.0.0-alpha.16",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
     "eslint-plugin-react": "^7.34.2",
