--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-auth": "5.0.0-beta.19",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "stripe": "^18.5.0",
     "typescript-eslint": "^7.13.0"
   },
   "devDependencies": {
@@ -44,4 +45,3 @@
     "seed": "ts-node prisma/seed.ts"
   }
 }
-
